tests/paczka1/small_fuzzy/47516948.err
Error in line 3: ke0 A838 83,82
Error in line 1: pJOy4JbRH A912 77,8
Error in line 9: egSxE7wI A912 -3,7
